# trajectory-calculation-3d-scanner

./: .gitignore  README.md
.devcontainer/: devcontainer.json  start_gui_stack.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cam_touch_ui/lib/cam_touch_ui/: cam_touch_ui
install/cam_touch_ui/share/cam_touch_ui/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/subsea_bringup/share/subsea_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/subsea_bringup/share/subsea_bringup/launch/: rover_app.launch.py
install/subsea_capture/lib/subsea_capture/: capture_service
install/subsea_capture/share/subsea_capture/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/subsea_interfaces/include/subsea_interfaces/subsea_interfaces/msg/: rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/subsea_interfaces/include/subsea_interfaces/subsea_interfaces/srv/detail/: capture_pair__builder.hpp  capture_pair__description.c  capture_pair__functions.h  capture_pair__rosidl_typesupport_fastrtps_c.h  capture_pair__rosidl_typesupport_fastrtps_cpp.hpp  capture_pair__rosidl_typesupport_introspection_cpp.hpp  capture_pair__struct.h  capture_pair__traits.hpp  capture_pair__type_support.cpp  capture_pair__type_support.h
install/subsea_interfaces/share/ament_index/resource_index/rosidl_interfaces/: subsea_interfaces
install/subsea_interfaces/share/subsea_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/subsea_interfaces/share/subsea_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  export_subsea_interfaces__rosidl_generator_cExport-noconfig.cmake  export_subsea_interfaces__rosidl_generator_cExport.cmake  export_subsea_interfaces__rosidl_generator_pyExport.cmake  export_subsea_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_subsea_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  subsea_interfaces__rosidl_typesupport_cExport-noconfig.cmake  subsea_interfaces__rosidl_typesupport_cExport.cmake  subsea_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  subsea_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  subsea_interfaces__rosidl_typesupport_introspection_cppExport.cmake
install/subsea_interfaces/share/subsea_interfaces/srv/: CapturePair.json
install/subsea_ui/lib/subsea_ui/: ui
install/subsea_ui/share/subsea_ui/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
ros2_ws/src/cam_touch_ui/: package.xml  setup.cfg  setup.py
ros2_ws/src/cam_touch_ui/cam_touch_ui/: app.py  theme.py
ros2_ws/src/subsea_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/subsea_bringup/launch/: rover_app.launch.py
ros2_ws/src/subsea_bringup/subsea_bringup/: bno085_imu_node.py  gpsd_json_fix_bridge.py  rover_app.launch.py
ros2_ws/src/subsea_capture/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/subsea_capture/subsea_capture/: capture_service.py
ros2_ws/src/subsea_interfaces/: CMakeLists.txt
ros2_ws/src/subsea_interfaces/action/: CapturePair.action
ros2_ws/src/subsea_interfaces/srv/: CapturePair.srv
ros2_ws/src/subsea_localization/: package.xml  setup.cfg  setup.py
ros2_ws/src/subsea_localization/config/: ekf_global.yaml  ekf_local.yaml  navsat_transform.yaml
ros2_ws/src/subsea_localization/launch/: localization.launch.py
ros2_ws/src/subsea_mock/: package.xml  setup.cfg  setup.py
ros2_ws/src/subsea_mock/launch/: mock_app.launch.py
ros2_ws/src/subsea_mock/subsea_mock/: mock_camera_publisher.py  mock_capture_service.py
ros2_ws/src/subsea_ui/: package.xml  setup.cfg  setup.py
ros2_ws/src/subsea_ui/subsea_ui/: theme.py  ui.py
scripts/: bootstrap_ubuntu_24_04.sh  bootstrap_windows.ps1  check_rover_field.sh  collect_rover_diagnostics.sh  devcontainer_setup.sh  install_desktop_shortcut.sh  organize_field_data.sh  run_mock_gui.sh  run_rover_field.sh
